<resources>
    <string name="app_name">QP Calculator</string>
    <string name="result_text">0</string>
    <string name="result_button">result</string>
    <string name="person1">Person 1</string>
    <string name="person2">Person 2</string>
    <string name="score">Score</string>
    <string name="result">Result</string>
    <string name="decrement">-</string>
    <string name="increment">+</string>
    <string name="question">20</string>
    <string name="question_title">Number of Questions</string>
</resources>
