<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_margin="8dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="32dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="42dp"
            android:layout_marginRight="42dp"
            android:orientation="vertical">

            <TextView
                style="@style/HeaderStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/person1"/>

            <EditText
                android:id="@+id/score1_edit_view"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:hint="@string/score"
                android:inputType="phone"/>

            <EditText
                android:id="@+id/result1_edit_view"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:hint="@string/result"
                android:inputType="phone"/>

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="130dp"
            android:layout_gravity="center_horizontal"
            android:background="#000000"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="42dp"
            android:layout_marginStart="42dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <TextView
                style="@style/HeaderStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/person2"/>

            <EditText
                android:id="@+id/score2_edit_view"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:hint="@string/score"
                android:inputType="phone"/>

            <EditText
                android:id="@+id/result2_edit_view"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:hint="@string/result"
                android:inputType="phone"/>

        </LinearLayout>
    </LinearLayout>


    <TextView
        style="@style/HeaderStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:text="@string/question_title"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp">

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:onClick="decrementClick"
            android:text="@string/decrement"/>

        <TextView
            android:id="@+id/question_text_view"
            style="@style/ResultStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/question"/>

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:onClick="incrementClick"
            android:text="@string/increment"/>

    </LinearLayout>

    <Button
        android:id="@+id/result_button"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:onClick="resultClick"
        android:text="@string/result_button"/>

    <TextView
        android:id="@+id/result_text_view"
        style="@style/ResultStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/result_text" />



</LinearLayout>
